@@ -1,5 +1,7 @@
 Search API 1.x, dev (xxxx-xx-xx):
 ---------------------------------
+- #2358065 by tstoeckler: Added the option for highlighting of partial matches
+  to the processor.
 - #2470837 by sinn, drunken monkey: Added documentation on why to disable Core
   Search.
 - #2767609 by drunken monkey, borisson_: Added backend tests for empty value
